--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-dash==2.6.0
-dash-bootstrap-components
-flask
+Flask>=2.0.1
+dash>=2.0.0
+dash-bootstrap-components>=1.0.0
 pandas
+plotly
 gunicorn
